# ba-ebdp-lightweight-template

./: README.MD  pyproject.toml
 cases/: clean_cyprus_network.py  gothenburg.py  gothenburg_official_dual.py  gothenburg_v2_dual.py  gothernburg_official.py
src/: util.py
workflows/: composite.py  compute_Nicosia1.py  compute_accessibility.py  compute_centrality.py  compute_centrality_clean.py  compute_centrality_raw.py  compute_custom_network.py  download_buildings.py  download_extent.py  download_network.py  download_network_clean.py  download_network_raw.py  extent_download.py  population_density.md
