[project]
name = "ba-ebdp-lightweight-template"
version = "0.0.1"
description = "Template workflows for lightweight EBDP"
authors = []
dependencies = [
    "shapely>=2.0.2",
    "geopandas>=0.14.1",
    "cityseer>=4.6.7",
    "osmnx>=1.7.1",
    "momepy>=0.6.0",
    "networkx>=3.2.1",
    "pandas>=2.1.3",
    "matplotlib>=3.8.1",
    "ipykernel>=6.26.0",
    "pyproj>=3.6.1",
    "pdm>=2.12.2",
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license = {text = "AGPL-3.0"}
